--- a/P006636.opf/layers/v001/Pagination.yml
+++ b/P006636.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 6734e5b6edff49d38c140602bfe39a45
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   8a47d78ca88b4994ba9fc94e63375fcc:
