--- a/P006636.opf/meta.yml
+++ b/P006636.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P006636
 initial_creation_type: ocr
+created_at: 22/03/2020
+last_modified_at: 24/11/2021
 source_metadata:
   id: bdr:W20214
   title: མཚོ་ལྷོ་ཁུལ་གྱི་དགོན་སྡེ་ཁག་གི་ལོ་རྒྱུས་སྙིང་བསྡུས
