--- a/P006636.opf/meta.yml
+++ b/P006636.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P006636
 initial_creation_type: ocr
 created_at: 22/03/2020
-last_modified_at: 24/11/2021
+last_modified_at: 2021-12-17 12:11:56.615144
 source_metadata:
   id: bdr:W20214
   title: མཚོ་ལྷོ་ཁུལ་གྱི་དགོན་སྡེ་ཁག་གི་ལོ་རྒྱུས་སྙིང་བསྡུས
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 799
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: true
